# vokari

./: .gitignore  .pre-commit-config.yaml  Avvia VOKARI (silenzioso).vbs  Avvia VOKARI.bat  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  config.example.json  hatch_build.py  pyproject.toml
.github/workflows/: ci-macos.yml  ci.yml
app/: api.py  changelog.py  debuglog.py  desktop_entry.py  ffmpeg_manager.py  jobs.py  lhm_manager.py  main.py  ollama_manager.py  pipeline.py  preflight.py  runtime_env.py
app/assets/: changelog.json  make_icon.py  vokari.icns
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.test.tsx  App.tsx  bridge.test.ts  bridge.ts  confirm.ts  icons.tsx  main.tsx  modelStatus.test.ts  modelStatus.ts  notify.ts  sessionsBus.ts  toast.ts
frontend/src/__tests__/: bridge.test.ts  chrome.test.tsx  navigation.test.tsx
frontend/src/chrome/: AppFrame.tsx  Banner.tsx  ConfirmHost.test.tsx  ConfirmHost.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx  Toaster.test.tsx  Toaster.tsx  WhatsNew.test.tsx  WhatsNew.tsx
frontend/src/dev/: DevHarness.tsx  fixtures.ts  mockApi.ts
frontend/src/i18n/: index.ts
frontend/src/screens/: Artifacts.test.tsx  Artifacts.tsx  ErrorScreen.test.tsx  ErrorScreen.tsx  Home.test.tsx  Home.tsx  Interview.test.tsx  Interview.tsx  Live.test.tsx  Live.tsx  MarkdownDoc.test.tsx  MarkdownDoc.tsx  Models.test.tsx  Models.tsx  Onboarding.test.tsx  Onboarding.tsx  Processing.test.tsx  Processing.tsx  Sessions.test.tsx  Sessions.tsx  Settings.test.tsx  Settings.tsx  TranscriptReview.test.tsx  TranscriptReview.tsx
frontend/src/styles/: base.css  vokari.css
scripts/: bump_version.py  capture_window.ps1  e2e_smoke.py
src/vokari/: __init__.py  __main__.py  cli.py  i18n.py  markers.py  paths.py  settings.py
src/vokari/analyze/: analyzer.py  fit.py  interview.py  preview.py  prompts.py  schema.py
src/vokari/audio/: __init__.py  capture.py  convert.py
src/vokari/llm/: anthropic_provider.py  base.py  factory.py  ollama_provider.py
src/vokari/render/: briefing.py  obsidian.py  pdf.py  recap.py
src/vokari/store/: session.py  sessions_repo.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_api_sessions.py  test_briefing_invariants.py  test_bump_version.py  test_capture.py  test_capture_on_audio.py  test_capture_system_responsive.py  test_changelog.py  test_chunking.py  test_cli.py  test_contract.py  test_convert.py  test_desktop_entry.py  test_evals_smoke.py  test_factory.py  test_ffmpeg_manager.py  test_fit.py  test_i18n_output.py  test_integration_edit_transcript.py  test_interview.py  test_jobs.py  test_lhm_manager.py  test_live_resample.py  test_live_transcriber.py  test_llm_providers.py  test_llm_streaming.py  test_macos_portability.py  test_main.py  test_main_dist.py  test_markers.py  test_models.py  test_ollama_manager.py  test_packaging_wheel.py  test_paths.py  test_pipeline.py  test_pipeline_bugs.py  test_preflight.py  test_preview.py  (+13 more)
tests/fixtures/: stub_transcript.txt
(+6 files in other folders)
